# gong

./: .env.example  .gitignore  COLLABORATION.md  PLAN.md  README.md  architecture.md  eslint.config.mjs  firestore.rules  next.config.ts  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.impeccable/: hook.cache.json
data/runs/: run-6c8cf847.json
docs/: whatsapp-ui.md
docs/feedback/: 2026-07-11-user-review.md
docs/mail/: to-claude.md  to-codex.md
examples/: cs-studio-purchase-request.mock.json
frontend/: AGENT_MESSAGE_FORMAT.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: calls-list.tsx  chat-page-content.tsx  chat-view.tsx  chats-list.tsx  default-panel.tsx  ios-icons.tsx  message-action-buttons.tsx  message-input.tsx  order-card.tsx  order-state-icons.tsx  orders-dashboard.tsx  search-dropdown.tsx  settings-content.tsx  settings-dropdown.tsx  status-list.tsx  svg-symbols.tsx  theme-modal.tsx  theme-provider.tsx  whatsapp-app.tsx
frontend/lib/: data.ts  firebase.ts  theme.ts  types.ts
purchase_orchestrator/: __init__.py  ai_browser.py  executor.py  main.py  models.py  repository.py  service.py
scripts/: design-shots.py  inspect_cookie_consent.py  inspect_cs_studio.py  inspect_edrone_popup.py  run_abud_purchase_demo.py  run_purchase_demo.py  smoke-connectors.ts  smoke-full-pipeline.ts  smoke-pipeline.ts  smoke-product-page.ts  time-question-plan.ts  verify_next_app.py
src/app/: globals.css  layout.tsx  page.tsx
tests/: test_ai_browser.py  test_api.py
(+74 files in other folders)
