[project]
name = "purchase-orchestrator"
version = "0.1.0"
description = "Purchase authorization and execution orchestration service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
